NOJIRA added designs

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,8 @@
     <body>
         <h1>Mr Porter Test</h1>
 
-        <p>{{products}}</p>
+        <p><img src="/mockups.jpg" width="300"></p>
+        
+        <code>{{products}}</code>
     </body>
 </html>
