--- a/less/main.less
+++ b/less/main.less
@@ -2,4 +2,56 @@
 
 body{
   color: #494949;
+  font-family: Georgia, "Times New Roman", serif;
+}
+
+ul.products{
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  li{
+    display: block;
+    float: left;
+  }
+}
+
+
+/* for high resolution display */
+
+@media only screen and (min--moz-device-pixel-ratio: 2),
+
+only screen and (-o-min-device-pixel-ratio: 2/1),
+
+only screen and (-webkit-min-device-pixel-ratio: 2),
+
+only screen and (min-device-pixel-ratio: 2) {
+
+  .image {
+
+
+  }
+
+}
+
+.product-holder{
+  width:270px;
+
+  @media (max-width: 599px) {
+    width:170px;
+  }
+
+  @media (min-width: 600px) and (max-width: 767px) {
+    width:200px;
+  }
+
+  @media (min-width: 768px) and (max-width: 979px) {
+    width:270px;
+  }
+
+  @media (min-width: 1200px) {
+    width:270px;
+  }
+  .image-holder{
+
+  }
 }
