--- a/less/main.less
+++ b/less/main.less
@@ -62,6 +62,8 @@ only screen and (min-device-pixel-ratio: 2) {
 }
 
 .container{
+  margin-top: 20px;
+  padding-top:20px;
   border: 1px solid #cacaca;
   width:805px;
 
