Cleaned up the css and added the fade directive.

--- a/less/main.less
+++ b/less/main.less
@@ -38,7 +38,7 @@ only screen and (min-device-pixel-ratio: 2) {
 
 .product-holder{
   .largerImageCell;
-  background-color: #ffff00;
+//  background-color: #ffff00;
   overflow: hidden;
   p{
     padding-right: 10px;
@@ -46,26 +46,26 @@ only screen and (min-device-pixel-ratio: 2) {
   @media (max-width: 599px) {
     width:220px;
     min-height:320px;
-    background-color: #ff7b45;
+//    background-color: #ff7b45;
 
   }
 
   @media (min-width: 600px) and (max-width: 767px) {
     width:196px;
     min-height:330px;
-    background-color: #ff2656;
+//    background-color: #ff2656;
 
 
   }
 
   @media (min-width: 768px) and (max-width: 979px) {
     .largerImageCell;
-    background-color: #ff2013;
+//    background-color: #ff2013;
   }
 
   @media (min-width: 1200px) {
     .largerImageCell;
-    background-color: #9728ff;
+//    background-color: #9728ff;
 
 
   }
@@ -114,11 +114,11 @@ p.designer{
 }
 .fadedIn{
   opacity: 1;
-  transition: opacity .25s ease-in-out;
-  -moz-transition: opacity .25s ease-in-out;
-  -webkit-transition: opacity .25s ease-in-out;
-  -o-transition: opacity .25s ease-in-out;
-  transition: opacity .25s ease-in-out;
-  &:hover{opacity:.4}
+  transition: opacity .75s ease-in-out;
+  -moz-transition: opacity .75s ease-in-out;
+  -webkit-transition: opacity .75s ease-in-out;
+  -o-transition: opacity .75s ease-in-out;
+  transition: opacity .75s ease-in-out;
+  &:hover{opacity:.8}
 
 }
